window: avoid crash for null sidebar location

Currently if there is no row selected for the sidebar,
its location is NULL. So when the properties actions is
performed, the location is always NULL for no sidebar
locations.
Probably we want to fix that on the sidebar. But also protect
ourselves about it.

https://bugzilla.gnome.org/show_bug.cgi?id=754677